--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+    "dev:customer": "next dev -p 3000",
+    "dev:admin": "next dev -p 3001",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "start:customer": "next start -p 3000",
+    "start:admin": "next start -p 3001"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -66,6 +70,8 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "^9.37.0",
+    "eslint-config-next": "15.5.5",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
