--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
-    "dev:customer": "next dev -p 3000",
-    "dev:admin": "next dev -p 3001",
+    "dev": "node server.js",
+    "dev:customer": "node server.js",
+    "dev:admin": "node server.js --admin",
     "lint": "next lint",
-    "start": "next start",
-    "start:customer": "next start -p 3000",
-    "start:admin": "next start -p 3001"
+    "start": "NODE_ENV=production node server.js",
+    "start:customer": "NODE_ENV=production node server.js",
+    "start:admin": "NODE_ENV=production node server.js --admin"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -41,6 +41,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@types/ws": "^8.18.1",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -63,6 +64,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "ws": "^8.18.3",
     "zod": "3.25.76"
   },
   "devDependencies": {
