--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "lint": "next lint",
     "start": "NODE_ENV=production node server.js",
     "start:customer": "NODE_ENV=production node server.js",
-    "start:admin": "NODE_ENV=production node server.js --admin"
+    "start:admin": "NODE_ENV=production node server.js --admin",
+    "test": "jest",
+    "test:unit": "jest --testPathPattern=__tests__/unit",
+    "test:components": "jest --testPathPattern=__tests__/components",
+    "test:api": "jest --testPathPattern=__tests__/api",
+    "test:e2e": "playwright test",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -44,14 +51,18 @@
     "@types/ws": "^8.18.1",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "latest",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "8.5.1",
     "geist": "latest",
     "input-otp": "1.4.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
+    "mongoose": "^8.19.2",
     "next": "^15.5.5",
     "next-themes": "latest",
     "react": "^19",
@@ -68,14 +79,29 @@
     "zod": "3.25.76"
   },
   "devDependencies": {
+    "@playwright/test": "^1.56.1",
     "@tailwindcss/postcss": "^4.1.9",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^29.5.8",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/mongodb-memory-server": "^1.8.0",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/supertest": "^6.0.2",
     "eslint": "^9.37.0",
     "eslint-config-next": "15.5.5",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "mongodb-memory-server": "^9.1.1",
+    "playwright": "^1.40.1",
     "postcss": "^8.5",
+    "supertest": "^6.3.4",
     "tailwindcss": "^4.1.9",
+    "ts-jest": "^29.1.1",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
   }
